# menu_generator_bot

./: .dockerignore  .env  .gitignore  Makefile  README.md  pyproject.toml
app/: main.py  oldmain.py  pyproject.toml
app/ai_css_generator/: Dockerfile  guard.py  main.py  openai_client.py  pyproject.toml
app/api/: Dockerfile  database.py  main.py  menu_generator.py  models.py  pyproject.toml  routes.py
app/api/domain/db/: __init__.py  database.py  models.py
app/api/domain/entity/: __init__.py  menu_generator.py  tables.py
app/api/routes/: routes.py
app/api/static/css/themes/: light-elegant.css  modern-dark.css
app/api/templates/: __init__.py  menu.html
app/bot/: Dockerfile  base.py  bot.py  pyproject.toml  temp_BQACAgIAAxkBAAPLaCC2TPjtkwyk2WEImGrpWpZ5H6IAAm9vAALbXQFJBVrS4Gck_vo2BA.csv
app/bot/application/use_cases/: create_organization.py  manage_image.py  manage_menu.py  manage_qr_code.py  manage_theme.py
app/bot/domain/: exceptions.py
app/bot/domain/models/: image_management.py  menu_management.py  organization_creation.py  qr_code.py  theme_management.py
app/bot/domain/repositories/: image_repository.py  menu_repository.py  organization_creation_repository.py  qr_code_repository.py  theme_repository.py
app/bot/domain/services/: image_service.py  menu_service.py  organization_service.py  qr_code_service.py  theme_service.py
app/bot/infrastructure/bot/: main.py
app/bot/infrastructure/config/: config.py
app/bot/infrastructure/exceptions/: handler_exceptions.py
app/bot/infrastructure/handlers/: base_handler.py  help_handler.py  image_handler.py  menu_handler.py  organization_handler.py  qr_code_handler.py  theme_handler.py
app/bot/infrastructure/keyboards/: organization_keyboard.py
app/bot/infrastructure/logging/: error_handler.py  logger.py
app/bot/infrastructure/states/: organization_states.py
app/bot/infrastructure/utils/: api_utils.py  error_utils.py  file_utils.py  logging_utils.py  menu_utils.py  message_utils.py  organization_utils.py  qr_code_utils.py  state_utils.py  theme_utils.py  user_utils.py  validation_utils.py  web_page_utils.py
app/bot/menu_generator_bot_ai_generated/: states.py
app/bot/menu_generator_bot_ai_generated/handlers/: help.py  images.py  organizations.py  start.py
app/bot/menu_generator_bot_ai_generated/keyboards/: main.py
app/bot/menu_generator_bot_ai_generated/services/: generation_service.py  organization_service.py  user_service.py
app/bot/menu_generator_bot_ai_generated/utils/: logging.py
app/db/init/: init.sql
app/domain/models/: base.py  menu.py  organization.py  user.py
app/domain/repositories/: base.py
app/domain/value_objects/: theme.py
app/generator/: Dockerfile  base.py  main.py  pyproject.toml
app/static/css/: themes.css
app/static/css/themes/: nature.css  vintage.css
app/static/themes/: classic.css
app/templates/: base.html
app/templates/components/: category.html  qr_code.html
bash_scripts/: certs_mtsl.sh
docker_compose/: app.yml  generator.yml  nginx.yml  test_build.yml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
nginx/: Dockerfile  default.conf  nginx.conf  test.conf
nginx/configs/: api.conf  static.conf
static/: index.html  script.js  style.css
static/css/themes/: futuristic.css  minimal.css
static/pages/menu_deadrabbits_20250515124620/: index.html
static/pages/menu_fghjfghjftghj_20250516142731/: index.html
static/pages/menu_hgjfjhgkjhgh_20250515145434/: index.html
static/pages/menu_руллвалоа_20250518120917/: index.html
tests/application/: test_manage_qr_code.py
tests/domain/: test_image_management.py  test_image_service.py  test_qr_code.py  test_qr_code_service.py
tests/infrastructure/: test_qr_code_handler.py
