[project]
name = "rabbit-bot"
version = "0.1.0"
description = "Bot Rabbit BAR and others"
authors = [
    {name = "TitanPillow"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.115.12,<0.116.0"
python-dotenv = ">=1.1.0,<2.0.0"
uvicorn = ">=0.34.2,<0.35.0"
sqlalchemy = ">=2.0.40,<3.0.0"
jinja2 = ">=3.1.3,<4.0.0"
aiogram = "3.3.0"
asyncpg = "^0.29.0"
aiohttp = "^3.9.3"
pillow = "^11.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
