[project]
name = "rabbit-bot"
version = "0.1.0"
description = "Bot Rabbit BAR and others"
authors = [
    {name = "TitanPillow"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "aiogram (>=3.3.0,<4.0.0)",
    "aiohttp (>=3.9.0,<4.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "alembic (>=1.13.0,<2.0.0)",
    "asyncpg (>=0.29.0,<0.30.0)",
    "pydantic (>=2.5.0,<3.0.0)",
    "pydantic-settings (>=2.1.0,<3.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pillow (>=10.1.0,<11.0.0)",
    "qrcode (>=7.4.0,<8.0.0)",
    "redis (>=5.0.0,<6.0.0)",
    "tenacity (>=8.2.0,<9.0.0)",
    "structlog (>=24.1.0,<25.0.0)",
    "python-multipart (>=0.0.6,<0.1.0)",
    "email-validator (>=2.1.0,<3.0.0)",
    "phonenumbers (>=8.13.0,<9.0.0)",
    "babel (>=2.14.0,<3.0.0)",
    "jinja2 (>=3.1.0,<4.0.0)",
    "aiofiles (>=23.2.0,<24.0.0)",
    "httpx (>=0.26.0,<0.27.0)",
    "pytest (>=7.4.0,<8.0.0)",
    "pytest-asyncio (>=0.23.0,<0.24.0)",
    "pytest-cov (>=4.1.0,<5.0.0)",
    "black (>=24.1.0,<25.0.0)",
    "isort (>=5.13.0,<6.0.0)",
    "mypy (>=1.8.0,<2.0.0)",
    "ruff (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = ["E501"]
